--- a/core/src/main/resources/translation/en.yml
+++ b/core/src/main/resources/translation/en.yml
@@ -21,14 +21,14 @@ messages:
   # The message players with the permission connectionguard.notify.vpn will see, if behaviour is set to
   # KICK_NOTIFY or NOTIFY.
   vpn-notify: '&bConnection Guard &7| &e%name% &7(%IP%) was flagged as a &evpn user&7.'
-  vpn-notify-kick: '&bConnection Guard &7| &e%name% &7(%IP%) was flagged as a &evpn user&7 and kicked.'
+  vpn-webhook: "%NAME% (%IP%) tried to connect with a vpn."
   # The message players see when they are geo flagged and behavior is set to KICK or KICK_NOTIFY
   # Available placeholders: %NAME%, %IP%, %COUNTRY%, %CITY% and %ISP%
   geo-block: '&7It looks like you are connecting from &b%COUNTRY%&7, which is &bnot allowed&7 on this server.'
   # The message players with the permission connectionguard.notify.geo will see, if behaviour is set to
   # KICK_NOTIFY or NOTIFY.
   geo-notify: '&bConnection Guard &7| &e%NAME% &7(%IP%) was &egeo-flagged&7 (&e%COUNTRY%&7, %CITY%).'
-  geo-notify-block: '&bConnection Guard &7| &e%NAME% &7(%IP%) was &egeo-flagged&7 (&e%COUNTRY%&7, %CITY%) and kicked'
+  geo-webhook: "%NAME% (%IP%) tried to connect from %CITY%, %COUNTRY%."
 
   # Customize the output of the /connectionguard help command!
   help:
